@@ -13,6 +13,7 @@
 
 package org.hkijena.jipipe.ui.components;
 
+import com.google.common.collect.Sets;
 import com.google.common.eventbus.EventBus;
 import org.hkijena.jipipe.ui.components.markdown.MarkdownDocument;
 import org.hkijena.jipipe.ui.components.markdown.MarkdownReader;
@@ -21,12 +22,16 @@ import org.hkijena.jipipe.utils.StringUtils;
 import org.hkijena.jipipe.utils.UIUtils;
 import org.jdesktop.swingx.JXPanel;
 import org.jdesktop.swingx.ScrollableSizeHint;
+import org.scijava.Disposable;
 
 import javax.swing.*;
 import java.awt.*;
-import java.awt.event.*;
-import java.lang.ref.WeakReference;
-import java.util.ArrayDeque;
+import java.awt.event.FocusAdapter;
+import java.awt.event.FocusEvent;
+import java.awt.event.MouseAdapter;
+import java.awt.event.MouseEvent;
+import java.util.List;
+import java.util.*;
 
 import static org.hkijena.jipipe.utils.UIUtils.UI_PADDING;
 
@@ -48,6 +53,11 @@ public class FormPanel extends JXPanel {
     public static final int WITH_DOCUMENTATION = 1;
 
     /**
+     * Flag that indicates that documentation should be supported, but there should be no dedicated panel
+     */
+    public static final int DOCUMENTATION_NO_UI = 16;
+
+    /**
      * Flag that makes the content be wrapped in a {@link JScrollPane}
      */
     public static final int WITH_SCROLLING = 2;
@@ -58,22 +68,30 @@ public class FormPanel extends JXPanel {
      */
     public static final int DOCUMENTATION_BELOW = 4;
 
-    /**
-     * Flag that items should only be displayed when necessary
-     */
-    public static final int WITH_INFINITE_SCROLLING = 8;
+    private static final int COLUMN_PROPERTIES = 2;
+
+    private static final int COLUMN_LABEL_OR_WIDE_CONTENT = 0;
+
+    private static final int COLUMN_LABELLED_CONTENT = 1;
 
     private final EventBus eventBus = new EventBus();
-    private final boolean isInfiniteScrolling;
-    private int numRows = 0;
-    private JXPanel contentPanel = new JXPanel();
-    private MarkdownReader parameterHelp;
-    private JScrollPane scrollPane;
-    private JLabel parameterHelpDrillDown = new JLabel();
-    private ArrayDeque<FutureComponent> infiniteScrollingQueue = new ArrayDeque<>();
+    private final FormPanelContentPanel contentPanel = new FormPanelContentPanel();
+    private final MarkdownReader parameterHelp;
+    private final JLabel parameterHelpDrillDown = new JLabel();
+    private final boolean withDocumentation;
 
-    private boolean withDocumentation;
+    private final boolean documentationHasUI;
+    private int numRows = 0;
+    private JScrollPane scrollPane;
     private boolean hasVerticalGlue;
+
+    private FormPanel redirectDocumentationTarget;
+
+    private List<FormPanelEntry> entries = new ArrayList<>();
+
+    public FormPanel(int flags) {
+        this(null, flags);
+    }
 
     /**
      * Creates a new instance
@@ -82,11 +100,6 @@ public class FormPanel extends JXPanel {
      * @param flags    flags for this component
      */
     public FormPanel(MarkdownDocument document, int flags) {
-
-        if ((flags & WITH_INFINITE_SCROLLING) == WITH_INFINITE_SCROLLING)
-            flags |= WITH_SCROLLING;
-        this.isInfiniteScrolling = (flags & WITH_INFINITE_SCROLLING) == WITH_INFINITE_SCROLLING;
-
         setLayout(new BorderLayout());
         contentPanel.setLayout(new GridBagLayout());
 
@@ -122,13 +135,28 @@ public class FormPanel extends JXPanel {
 
         if ((flags & WITH_DOCUMENTATION) == WITH_DOCUMENTATION) {
             this.withDocumentation = true;
-            boolean documentationBelow = (flags & DOCUMENTATION_BELOW) == DOCUMENTATION_BELOW;
-            AutoResizeSplitPane splitPane = new AutoResizeSplitPane(documentationBelow ? JSplitPane.VERTICAL_SPLIT : JSplitPane.HORIZONTAL_SPLIT, content, helpPanel, AutoResizeSplitPane.RATIO_3_TO_1);
-            add(splitPane, BorderLayout.CENTER);
+            if ((flags & DOCUMENTATION_NO_UI) != DOCUMENTATION_NO_UI) {
+                this.documentationHasUI = true;
+                boolean documentationBelow = (flags & DOCUMENTATION_BELOW) == DOCUMENTATION_BELOW;
+                AutoResizeSplitPane splitPane = new AutoResizeSplitPane(documentationBelow ? JSplitPane.VERTICAL_SPLIT : JSplitPane.HORIZONTAL_SPLIT, content, helpPanel, AutoResizeSplitPane.RATIO_3_TO_1);
+                add(splitPane, BorderLayout.CENTER);
+            } else {
+                this.documentationHasUI = false;
+                add(content, BorderLayout.CENTER);
+            }
         } else {
             this.withDocumentation = false;
+            this.documentationHasUI = false;
             add(content, BorderLayout.CENTER);
         }
+    }
+
+    public FormPanel getRedirectDocumentationTarget() {
+        return redirectDocumentationTarget;
+    }
+
+    public void setRedirectDocumentationTarget(FormPanel redirectDocumentationTarget) {
+        this.redirectDocumentationTarget = redirectDocumentationTarget;
     }
 
     public boolean isWithDocumentation() {
@@ -158,32 +186,7 @@ public class FormPanel extends JXPanel {
         return scrollPane;
     }
 
-    private void documentComponent(Component component, MarkdownDocument componentDocument) {
-        if (componentDocument != null) {
-            Toolkit.getDefaultToolkit().addAWTEventListener(new ComponentDocumentationHandler(this, component, componentDocument),
-                    AWTEvent.MOUSE_EVENT_MASK);
-            component.addMouseListener(new MouseAdapter() {
-                @Override
-                public void mouseEntered(MouseEvent e) {
-                    super.mouseEntered(e);
-                    parameterHelp.setTemporaryDocument(componentDocument);
-                    getEventBus().post(new HoverHelpEvent(componentDocument));
-                    updateParameterHelpDrillDown();
-                }
-            });
-            component.addFocusListener(new FocusAdapter() {
-                @Override
-                public void focusGained(FocusEvent e) {
-                    super.focusGained(e);
-                    parameterHelp.setTemporaryDocument(componentDocument);
-                    getEventBus().post(new HoverHelpEvent(componentDocument));
-                    updateParameterHelpDrillDown();
-                }
-            });
-        }
-    }
-
-    private void updateParameterHelpDrillDown() {
+    public void updateParameterHelpDrillDown() {
         MarkdownDocument current = parameterHelp.getTemporaryDocument();
         if (current == null) {
             parameterHelpDrillDown.setIcon(null);
@@ -205,31 +208,13 @@ public class FormPanel extends JXPanel {
     /**
      * Adds a component to the form
      *
-     * @param component     The component
-     * @param documentation Optional documentation for this component. Can be null.
-     * @param <T>           Component type
+     * @param component   The component
+     * @param description A description component displayed on the left hand side
+     * @param <T>         Component type
      * @return The component
      */
-    public <T extends Component> T addToForm(T component, MarkdownDocument documentation) {
-        GridBagConstraints contentPosition = new GridBagConstraints() {
-            {
-                anchor = GridBagConstraints.WEST;
-                gridx = 0;
-                gridwidth = 2;
-                gridy = numRows;
-                insets = UI_PADDING;
-                fill = GridBagConstraints.HORIZONTAL;
-                weightx = 1;
-            }
-        };
-        if (!isInfiniteScrolling)
-            contentPanel.add(component, contentPosition);
-        else
-            infiniteScrollingQueue.add(new FutureComponent(null, null, component, contentPosition, false));
-        ++numRows;
-        if (documentation != null)
-            documentComponent(component, documentation);
-        return component;
+    public <T extends Component> T addToForm(T component, Component description) {
+        return addToForm(component, description, null);
     }
 
     /**
@@ -245,7 +230,7 @@ public class FormPanel extends JXPanel {
         GridBagConstraints contentPosition = new GridBagConstraints() {
             {
                 anchor = GridBagConstraints.WEST;
-                gridx = 1;
+                gridx = COLUMN_LABELLED_CONTENT;
                 gridwidth = 1;
                 gridy = numRows;
                 insets = UI_PADDING;
@@ -253,32 +238,56 @@ public class FormPanel extends JXPanel {
                 weightx = 1;
             }
         };
-        if (!isInfiniteScrolling)
-            contentPanel.add(component, contentPosition);
+        contentPanel.add(component, contentPosition);
         if (description != null) {
             GridBagConstraints labelPosition = new GridBagConstraints() {
                 {
                     anchor = GridBagConstraints.WEST;
-                    gridx = 0;
+                    gridx = COLUMN_LABEL_OR_WIDE_CONTENT;
                     gridwidth = 1;
                     gridy = numRows;
                     insets = UI_PADDING;
                 }
             };
-            if (!isInfiniteScrolling)
-                contentPanel.add(description, labelPosition);
-            else {
-                infiniteScrollingQueue.add(new FutureComponent(description, labelPosition, component, contentPosition, false));
-            }
-        } else if (isInfiniteScrolling) {
-            infiniteScrollingQueue.add(new FutureComponent(null, null, component, contentPosition, false));
+            contentPanel.add(description, labelPosition);
         }
+        Component propertiesComponent;
+        if (withDocumentation)
+            propertiesComponent = createAndAddEntryPropertiesComponent(component, description, numRows, documentation);
+        else
+            propertiesComponent = null;
+        entries.add(new FormPanelEntry(numRows, description, component, propertiesComponent, false));
         ++numRows;
-        if (documentation != null)
-            documentComponent(component, documentation);
-        if (documentation != null && description != null)
-            documentComponent(description, documentation);
         return component;
+    }
+
+    private Component createAndAddEntryPropertiesComponent(Component component, Component description, int row, MarkdownDocument documentation) {
+        Component newComponent = createEntryPropertiesComponent(component, description, row, documentation);
+        if (newComponent != null) {
+            GridBagConstraints gridBagConstraints = new GridBagConstraints() {
+                {
+                    anchor = GridBagConstraints.WEST;
+                    gridx = COLUMN_PROPERTIES;
+                    gridwidth = 1;
+                    gridy = row;
+                    insets = UI_PADDING;
+                    fill = GridBagConstraints.NONE;
+                }
+            };
+            contentPanel.add(newComponent, gridBagConstraints);
+        }
+        return newComponent;
+    }
+
+    /**
+     * Adds a component. Its size is two columns.
+     *
+     * @param component The component
+     * @param <T>       Component type
+     * @return The component
+     */
+    public <T extends Component> T addWideToForm(T component) {
+        return addWideToForm(component, null);
     }
 
     /**
@@ -293,7 +302,7 @@ public class FormPanel extends JXPanel {
         GridBagConstraints gridBagConstraints = new GridBagConstraints() {
             {
                 anchor = GridBagConstraints.WEST;
-                gridx = 0;
+                gridx = COLUMN_LABEL_OR_WIDE_CONTENT;
                 gridwidth = 2;
                 gridy = numRows;
                 insets = UI_PADDING;
@@ -301,14 +310,61 @@ public class FormPanel extends JXPanel {
                 weightx = 1;
             }
         };
-        if (!isInfiniteScrolling)
-            contentPanel.add(component, gridBagConstraints);
+        Component propertiesComponent;
+        if (withDocumentation)
+            propertiesComponent = createAndAddEntryPropertiesComponent(component, null, numRows, documentation);
         else
-            infiniteScrollingQueue.add(new FutureComponent(null, null, component, gridBagConstraints, true));
+            propertiesComponent = null;
+        contentPanel.add(component, gridBagConstraints);
+        entries.add(new FormPanelEntry(numRows, null, component, propertiesComponent, true));
         ++numRows;
-        if (documentation != null)
-            documentComponent(component, documentation);
         return component;
+    }
+
+    public void showDocumentation(MarkdownDocument documentation) {
+        if (redirectDocumentationTarget == null) {
+            if (withDocumentation && documentationHasUI) {
+                parameterHelp.setTemporaryDocument(documentation);
+                getEventBus().post(new HoverHelpEvent(documentation));
+                updateParameterHelpDrillDown();
+            } else {
+                // Just popup the documentation
+                MarkdownReader reader = new MarkdownReader(false, documentation);
+                JDialog dialog = new JDialog(SwingUtilities.getWindowAncestor(this));
+                dialog.setIconImage(UIUtils.getIcon128FromResources("jipipe.png").getImage());
+                JPanel panel = new JPanel(new BorderLayout(8, 8));
+                panel.setBorder(BorderFactory.createEmptyBorder(4, 4, 4, 4));
+                panel.add(reader, BorderLayout.CENTER);
+
+                dialog.setContentPane(panel);
+                dialog.setTitle("Documentation");
+                dialog.setModal(true);
+                dialog.pack();
+                dialog.setSize(new Dimension(640, 480));
+                dialog.setLocationRelativeTo(SwingUtilities.getWindowAncestor(this));
+                UIUtils.addEscapeListener(dialog);
+                dialog.setVisible(true);
+            }
+        } else {
+            redirectDocumentationTarget.showDocumentation(documentation);
+        }
+    }
+
+    protected Component createEntryPropertiesComponent(Component component, Component description, int row, MarkdownDocument documentation) {
+        if (documentation != null) {
+            JButton helpButton = new JButton(UIUtils.getIconFromResources("actions/help-muted.png"));
+            helpButton.setBorder(null);
+            helpButton.addActionListener(e -> {
+                showDocumentation(documentation);
+            });
+            installComponentHighlighter(helpButton, Sets.newHashSet(component, description));
+            return helpButton;
+        }
+        return null;
+    }
+
+    public int getNumRows() {
+        return numRows;
     }
 
     /**
@@ -320,7 +376,20 @@ public class FormPanel extends JXPanel {
      */
     public GroupHeaderPanel addGroupHeader(String text, Icon icon) {
         GroupHeaderPanel panel = new GroupHeaderPanel(text, icon);
-        addWideToForm(panel, null);
+        GridBagConstraints gridBagConstraints = new GridBagConstraints() {
+            {
+                anchor = GridBagConstraints.WEST;
+                gridx = COLUMN_LABEL_OR_WIDE_CONTENT;
+                gridwidth = 3;
+                gridy = numRows;
+                insets = UI_PADDING;
+                fill = GridBagConstraints.HORIZONTAL;
+                weightx = 1;
+            }
+        };
+        contentPanel.add(panel, gridBagConstraints);
+        entries.add(new FormPanelEntry(numRows, null, panel, null, true));
+        ++numRows;
         return panel;
     }
 
@@ -340,6 +409,7 @@ public class FormPanel extends JXPanel {
                 weighty = 1;
             }
         });
+        entries.add(new FormPanelEntry(numRows, null, glue, null, true));
         ++numRows;
         hasVerticalGlue = true;
     }
@@ -348,9 +418,8 @@ public class FormPanel extends JXPanel {
      * Removes the last row. Silently fails if there are no rows.
      */
     public void removeLastRow() {
-        if (isInfiniteScrolling && !infiniteScrollingQueue.isEmpty()) {
-            infiniteScrollingQueue.removeLast();
-        } else if (contentPanel.getComponentCount() > 0) {
+        if (contentPanel.getComponentCount() > 0) {
+            entries.remove(entries.size() - 1);
             contentPanel.remove(contentPanel.getComponentCount() - 1);
             --numRows;
         }
@@ -360,12 +429,27 @@ public class FormPanel extends JXPanel {
      * Removes all components
      */
     public void clear() {
-        infiniteScrollingQueue.clear();
+        for (FormPanelEntry entry : entries) {
+            if(entry.label instanceof Disposable) {
+                ((Disposable) entry.label).dispose();
+            }
+            if(entry.properties instanceof Disposable) {
+                ((Disposable) entry.properties).dispose();
+            }
+            if(entry.content instanceof Disposable) {
+                ((Disposable) entry.content).dispose();
+            }
+        }
+        entries.clear();
         contentPanel.removeAll();
         numRows = 0;
         hasVerticalGlue = false;
         revalidate();
         repaint();
+    }
+
+    public List<FormPanelEntry> getEntries() {
+        return Collections.unmodifiableList(entries);
     }
 
     public MarkdownReader getParameterHelp() {
@@ -386,7 +470,7 @@ public class FormPanel extends JXPanel {
         contentPanel.add(component, new GridBagConstraints() {
             {
                 anchor = GridBagConstraints.WEST;
-                gridx = 0;
+                gridx = COLUMN_LABEL_OR_WIDE_CONTENT;
                 gridy = numRows;
                 fill = GridBagConstraints.BOTH;
                 gridwidth = 2;
@@ -395,9 +479,105 @@ public class FormPanel extends JXPanel {
                 insets = UI_PADDING;
             }
         });
-        documentComponent(component, document);
+        Component propertiesComponent = createAndAddEntryPropertiesComponent(component, null, numRows, document);
+        entries.add(new FormPanelEntry(numRows, null, component, propertiesComponent, true));
         ++numRows;
         hasVerticalGlue = true;
+    }
+
+    public void installComponentHighlighter(JComponent triggerComponent, Set<Component> targetComponents) {
+        triggerComponent.addFocusListener(new FocusAdapter() {
+            @Override
+            public void focusGained(FocusEvent e) {
+                contentPanel.setHighlightedComponents(targetComponents);
+            }
+
+            @Override
+            public void focusLost(FocusEvent e) {
+                contentPanel.removeHighlightedComponents(targetComponents);
+            }
+        });
+        triggerComponent.addMouseListener(new MouseAdapter() {
+            @Override
+            public void mouseEntered(MouseEvent e) {
+                contentPanel.setHighlightedComponents(targetComponents);
+            }
+
+            @Override
+            public void mouseExited(MouseEvent e) {
+                contentPanel.removeHighlightedComponents(targetComponents);
+            }
+        });
+    }
+
+    public static class FormPanelEntry {
+
+        private final int row;
+        private final Component label;
+        private final Component content;
+        private final Component properties;
+        private final boolean wide;
+
+        public FormPanelEntry(int row, Component label, Component content, Component properties, boolean wide) {
+            this.row = row;
+            this.label = label;
+            this.content = content;
+            this.properties = properties;
+            this.wide = wide;
+        }
+
+        public int getRow() {
+            return row;
+        }
+
+        public Component getLabel() {
+            return label;
+        }
+
+        public Component getContent() {
+            return content;
+        }
+
+        public Component getProperties() {
+            return properties;
+        }
+
+        public boolean isWide() {
+            return wide;
+        }
+    }
+
+    public static class FormPanelContentPanel extends JXPanel {
+        private Set<Component> highlightedComponents;
+
+        @Override
+        public void paint(Graphics g) {
+            super.paint(g);
+            if (highlightedComponents != null) {
+                g.setColor(Color.RED);
+                for (Component component : highlightedComponents) {
+                    if (component != null && component.isDisplayable() && component.isVisible()) {
+                        g.drawRect(component.getX(), component.getY(), component.getWidth(), component.getHeight());
+                    }
+                }
+            }
+        }
+
+        public Set<Component> getHighlightedComponents() {
+            return highlightedComponents;
+        }
+
+        public void setHighlightedComponents(Set<Component> highlightedComponents) {
+            this.highlightedComponents = new HashSet<>(highlightedComponents);
+            repaint();
+        }
+
+        public void removeHighlightedComponents(Set<Component> highlightedComponents) {
+            if (this.highlightedComponents != null) {
+                this.highlightedComponents.removeAll(highlightedComponents);
+                repaint();
+            }
+        }
     }
 
     /**
@@ -405,7 +585,7 @@ public class FormPanel extends JXPanel {
      */
     public static class GroupHeaderPanel extends JPanel {
         private final JLabel titleLabel;
-        private JTextPane descriptionArea;
+        private final JTextPane descriptionArea;
         private int columnCount = 0;
 
         /**
@@ -444,7 +624,7 @@ public class FormPanel extends JXPanel {
             });
             ++columnCount;
 
-            descriptionArea = UIUtils.makeBorderlessReadonlyTextPane("");
+            descriptionArea = UIUtils.makeBorderlessReadonlyTextPane("", true);
             descriptionArea.putClientProperty(JEditorPane.HONOR_DISPLAY_PROPERTIES, Boolean.TRUE);
             descriptionArea.setOpaque(false);
             descriptionArea.setBorder(null);
@@ -494,74 +674,6 @@ public class FormPanel extends JXPanel {
         public void setDescription(String description) {
             descriptionArea.setText(description);
             descriptionArea.setVisible(!StringUtils.isNullOrEmpty(description));
-        }
-    }
-
-    /**
-     * Mouse handler to target specific components
-     */
-    private static class ComponentDocumentationHandler implements AWTEventListener {
-
-        private final WeakReference<FormPanel> formPanel;
-        private final WeakReference<Component> target;
-        private final MarkdownDocument componentDocument;
-
-        private ComponentDocumentationHandler(FormPanel formPanel, Component component, MarkdownDocument componentDocument) {
-            this.formPanel = new WeakReference<>(formPanel);
-            this.target = new WeakReference<>(component);
-            this.componentDocument = componentDocument;
-        }
-
-        @Override
-        public void eventDispatched(AWTEvent event) {
-            Component component = target.get();
-            FormPanel panel = formPanel.get();
-            if (component == null || panel == null) {
-                Toolkit.getDefaultToolkit().removeAWTEventListener(this);
-                return;
-            }
-            if (!component.isDisplayable()) {
-                return;
-            }
-            if (!component.isVisible()) {
-                return;
-            }
-            if (event instanceof MouseEvent) {
-                MouseEvent mouseEvent = (MouseEvent) event;
-                if (((MouseEvent) event).getComponent() == component || SwingUtilities.isDescendingFrom(mouseEvent.getComponent(), component)) {
-                    try {
-                        Point componentLocation = component.getLocationOnScreen();
-                        boolean isInComponent = mouseEvent.getXOnScreen() >= componentLocation.x &&
-                                mouseEvent.getYOnScreen() >= componentLocation.y &&
-                                mouseEvent.getXOnScreen() < (component.getWidth() + componentLocation.x) &&
-                                mouseEvent.getYOnScreen() < (component.getHeight() + componentLocation.y);
-                        if (isInComponent && panel.parameterHelp.getTemporaryDocument() != componentDocument) {
-                            panel.parameterHelp.setTemporaryDocument(componentDocument);
-                            panel.getEventBus().post(new HoverHelpEvent(componentDocument));
-                            panel.updateParameterHelpDrillDown();
-                        }
-                    } catch (IllegalComponentStateException e) {
-                        // Workaround for Java bug
-                        Toolkit.getDefaultToolkit().removeAWTEventListener(this);
-                    }
-                }
-            }
-        }
-    }
-
-    public static class FutureComponent {
-        private final Component label;
-        private final GridBagConstraints labelPosition;
-        private final Component content;
-        private final GridBagConstraints contentPosition;
-        private final boolean wide;
-
-        public FutureComponent(Component label, GridBagConstraints labelPosition, Component content, GridBagConstraints contentPosition, boolean wide) {
-            this.label = label;
-            this.labelPosition = labelPosition;
-            this.content = content;
-            this.contentPosition = contentPosition;
-            this.wide = wide;
         }
     }
 
